--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -3,9 +3,9 @@ log4j.rootLogger=INFO, stdout
 
 log4j.logger.com.codeborne.selenide=ERROR, stdout
 log4j.logger.org.openqa.selenium=ERROR, stdout
+log4j.logger.io.github.bonigarcia.wdm=ERROR, stdout
 
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-#log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
